Direct migration from Java 11 to Java 21 using AI
Build: Spring Boot 2.7.0->3.2.0, Java 11->21, JUnit 4->5, Camel 2.25.4->4.4.3, ea-async->kilim

Language: Records, switch expressions, text blocks, var, List.of(), javax->jakarta

Runtime: Virtual threads (JEP 444), progress-based deadlock detection (ThreadMXBean incompatible with virtual threads), Sequenced Collections (JEP 431)
Co-authored-by: Cursor <cursoragent@cursor.com>